Fix findbugs warnings